# auto_nav_pioneer_ws

./: README.md  clean_ros.sh
doc/: part2_architecture.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/auto_nav_pioneer_interfaces/share/auto_nav_pioneer_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/auto_nav_pioneer_pkg/lib/auto_nav_pioneer_pkg/: fake_odom_node  pure_pursuit_controller_node  safety_teleop_node  waypoint_manager_node
install/auto_nav_pioneer_pkg/share/auto_nav_pioneer_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/auto_nav_pioneer_interfaces/: CMakeLists.txt  package.xml
src/auto_nav_pioneer_interfaces/msg/: Waypoint.msg  WaypointList.msg
src/auto_nav_pioneer_pkg/: package.xml  setup.cfg  setup.py
src/auto_nav_pioneer_pkg/auto_nav_pioneer_pkg/navigation/: pure_pursuit_controller_node.py  waypoint_manager_node.py
src/auto_nav_pioneer_pkg/auto_nav_pioneer_pkg/teleop/: gamepad_config.py  safety_teleop_node.py
src/auto_nav_pioneer_pkg/auto_nav_pioneer_pkg/utils/: fake_odom_node.py  geometry.py  waypoint_loader.py
src/auto_nav_pioneer_pkg/config/: gz_bridge.yaml  sim_params.yaml  waypoints_sim.yaml
src/auto_nav_pioneer_pkg/launch/: gazebo_sim.launch.py  sim.launch.py
src/auto_nav_pioneer_pkg/urdf/: pioneer.urdf
src/auto_nav_pioneer_pkg/worlds/: mission_world.sdf
(+99 files in other folders)
